# antenny

./: .gitignore  .gitmodules  Makefile  README.md  __board_webrepl_cfg.py  esp32_clean.mpf  esp32_install.mpf  esp32_reinstall.mpf  nyan_explorer.py  nyan_pyboard.py  nyanshell.py  reflash.sh  setup.py  wifi_config.py
hardware/: README.md
hardware/Antenna_base_v1/: 01_powersupply.SchDoc  02_USB2UART.SchDoc  03_pushswitch.SchDoc  04_IMU.SchDoc  05_PWMdriver.SchDoc  08_CoreBoard.SchDoc  Antenna_base.PrjPcb
hardware/Antenna_base_v2/: 01_powersupply.SchDoc  02_USB2UART.SchDoc  05_PWMdriver.SchDoc  08_CoreBoard.SchDoc  10_IMU_BREAKOUT.SchDoc  Antenna_base.PrjPcb
hardware/Antenna_base_v3/: 01_powersupply.SchDoc  03_pushswitch.SchDoc  05_PWMdriver.SchDoc  Antenna_base.PrjPcb  Antenna_base_v3.PcbDoc
hardware/Antenna_base_v5/: 01_powersupply.SchDoc  02_USB2UART.SchDoc  05_PWMdriver.SchDoc  (+6 more)
mpfshell/: .editorconfig  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg  setup.py  test.txt
mpfshell/doc/uml/: mpfshell.puml
mpfshell/mp/: conbase.py  conserial.py  contelnet.py  mpfshell.py  pyboard.py  webrepl_cfg.py
mpfshell/mpfshell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mpfshell/tests/modules/: README.md  test_tokenizer.py
mpfshell/tests/ontarget/: README.md  conftest.py  test_mpfexp.py
nyansat/: antenny.py
nyansat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
nyanshell/: nyanshell.py  requirements.txt  setup.py
src/: antenny.py  calibration.py  config.py  servtor.py  telem_receiver.py
(+250 files in other folders)
