[metadata]
description-file=README.md

[flake8]
exclude=setup.cfg
ignore=F403,E128,E126,E123,E121,E265,E203,E501,N802,N803,N806,C901,W503,E722

[isort]
include_trailing_comma = true
line_length = 120
force_grid_wrap = 0
multi_line_output = 3
skip=migrations,node_modules

[semantic_release]
version_variable = mp/version.py:FULL
